--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   </div>
 
-  <script src="index.js" type="module"></script>
+  <script src="./src/main.js" type="module"></script>
 
 
 </body>
