Refactored code structure , added styling , README.

--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
   <div id="carousel" class="carousel customClass">
 
     <div id="slides-container" class="slides">
-      <div class="item slide active">item 1</div>
-      <div class="item slide">item 2</div>
-      <div class="item slide">item 3</div>
-      <div class="item slide">item 4</div>
-      <div class="item slide">item 5</div>
+      <div class="item slide active" style="background-image: url(./src/img/paris.jpg)"></div>
+      <div class="item slide" style="background-image: url(./src/img/rome.jpg)"></div>
+      <div class="item slide" style="background-image: url(./src/img/london.jpg)"></div>
+      <div class="item slide" style="background-image: url(./src/img/berlin.jpg)"></div>
+      <div class="item slide" style="background-image: url(./src/img/budapest.jpg)"></div>
     </div>
 
   </div>
 
   <script src="./src/main.js" type="module"></script>
-
 
 </body>
 
